small UI improvements, add the name and surname on patch users too
